--- a/app/src/main/res/layout/activity_start_select.xml
+++ b/app/src/main/res/layout/activity_start_select.xml
@@ -24,28 +24,18 @@
         android:id="@+id/button6"
         android:layout_width="120dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="52dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginBottom="64dp"
+        android:layout_marginEnd="144dp"
+        android:layout_marginLeft="144dp"
+        android:layout_marginRight="144dp"
+        android:layout_marginStart="144dp"
         android:background="@drawable/y_btn"
         android:onClick="onButton6Clicked"
         android:text="선이수체계"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button7"
-        app:layout_constraintHorizontal_bias="0.642"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.006"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
-    <Button
-        android:id="@+id/button7"
-        android:layout_width="120dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="52dp"
-        android:layout_marginEnd="52dp"
-        android:layout_marginRight="52dp"
-        android:background="@drawable/y_btn"
-        android:text="소웨과책방"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 </android.support.constraint.ConstraintLayout>
